2022-09-20T16:29:23Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3091801033
* notice: last 14d: unq all: 9 36
* notice: prev accum: outdated-unq outdated-all / unq all: 600 2430 / 622 2465
* notice: next accum: outdated-unq outdated-all / unq all: 600 2430 / 622 2466
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-20]

2022-09-20T08:30:12Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3088595569
* notice: last 14d: unq all: 9 35
* notice: prev accum: outdated-unq outdated-all / unq all: 600 2430 / 621 2464
* notice: next accum: outdated-unq outdated-all / unq all: 600 2430 / 622 2465
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-20]

2022-09-20T02:06:13Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3086926283
* notice: last 14d: unq all: 9 34
* notice: prev accum: outdated-unq outdated-all / unq all: 594 2422 / 616 2458
* notice: next accum: outdated-unq outdated-all / unq all: 600 2430 / 621 2464
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-05] / []

2022-09-19T16:29:23Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3084039072
* notice: last 14d: unq all: 10 36
* notice: prev accum: outdated-unq outdated-all / unq all: 594 2422 / 615 2456
* notice: next accum: outdated-unq outdated-all / unq all: 594 2422 / 616 2458
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-09-19]

2022-09-19T08:29:57Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3080967459
* notice: last 14d: unq all: 9 34