@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-20T16:29:23Z",
+  "timestamp" : "2022-09-21T08:30:49Z",
   "count_outdated" : 2430,
   "uniques_outdated" : 600,
-  "count" : 2466,
-  "uniques" : 622,
+  "count" : 2468,
+  "uniques" : 624,
   "clones" : [
     {
       "timestamp": "2022-09-07T00:00:00Z",
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-21T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
