@@ -1,5 +1,5 @@
 {
-  "count": 36,
+  "count": 38,
   "uniques": 9,
   "clones": [
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-09-20T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-21T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
