@@ -1,3 +1,11 @@
+2022-09-21T08:30:49Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3096303405
+* notice: last 14d: unq all: 9 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 600 2430 / 622 2466
+* notice: next accum: outdated-unq outdated-all / unq all: 600 2430 / 624 2468
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-21]
+
 2022-09-20T16:29:23Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3091801033
 * notice: last 14d: unq all: 9 36
